# GameEngine2D

./: .gitignore  CMakeLists.txt  Config.txt  EngineStructure.puml  main.cpp
GESource/: Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  CommonHeaders.h  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  Scene_Menu.cpp  Scene_Menu.h  Scene_Play.cpp  Scene_Play.h  Systems.h  game.cpp  game.h
GESource/Components/: CCollision.cpp  CCollision.h  CShape.cpp  CShape.h  CTransform.cpp  CTransform.h
GESource/Math/: FVec2.cpp  FVec2.h
GESource/Systems/: SMovement.cpp  SMovement.h  SRender.cpp  SRender.h
