cmake_minimum_required(VERSION 3.21)
project(GameEngine2D)
set(SFML_STATIC_LIBRARIES TRUE)
set(CMAKE_CXX_STANDARD 20)
find_package(SFML 2.5 COMPONENTS system window graphics audio)
add_executable(GameEngine2D main.cpp GESource/Math/FVec2.h GESource/EntityManager.cpp GESource/EntityManager.h GESource/Entity.cpp GESource/Entity.h GESource/Components/CTransform.cpp GESource/Components/CTransform.h GESource/Components/CShape.cpp GESource/Components/CShape.h GESource/Systems/SMovement.cpp GESource/Systems/SMovement.h GESource/Systems/SRender.cpp GESource/Systems/SRender.h GESource/CommonHeaders.h)
target_link_libraries(GameEngine2D sfml-system sfml-window sfml-graphics sfml-audio -static)