cmake_minimum_required(VERSION 3.21)
project(GameEngine2D)
set(SFML_STATIC_LIBRARIES TRUE)
set(CMAKE_CXX_STANDARD 20)
find_package(SFML 2.5 COMPONENTS system window graphics audio)
add_compile_options(-gdwarf-4)
add_executable(GameEngine2D main.cpp GESource/Math/FVec2.h GESource/EntityManager.cpp GESource/EntityManager.h GESource/Entity.cpp GESource/Entity.h GESource/CommonHeaders.h GESource/Math/FVec2.cpp GESource/Components.h GESource/Game.cpp GESource/Game.h GESource/Action.cpp GESource/Action.h GESource/Animation.cpp GESource/Animation.h GESource/Assets.cpp GESource/Assets.h GESource/GameEngine.cpp GESource/GameEngine.h GESource/Physics.cpp GESource/Physics.h GESource/Scene.cpp GESource/Scene.h GESource/Scene_Menu.cpp GESource/Scene_Menu.h GESource/Scene_Play.cpp GESource/Scene_Play.h)
target_link_libraries(GameEngine2D sfml-system sfml-window sfml-graphics sfml-audio -static)